@@ -2,6 +2,12 @@
 \title{News for Package \pkg{smacof}}
 \encoding{UTF-8}
 
+\section{Changes in Version 1.8-15}{
+  \itemize{
+    \item \code{plot.smacofJK()} improved. 
+}  
+}
+
 \section{Changes in Version 1.8-14}{
   \itemize{
     \item Bug fix in \code{plot.smacofID()}. 
